REGRESSION(281024@main) LLInt return locations need to be added to JITOperationList https://bugs.webkit.org/show_bug.cgi?id=277462 rdar://132951616

Reviewed by Alexey Shvayka.

Move the list of LLInt opcodes that need returns to a macro so they get automagically populated
into JITOperationList.

* Source/JavaScriptCore/assembler/JITOperationList.cpp:
(JSC::llintOperations):
* Source/JavaScriptCore/llint/LLIntOpcode.h:
* Source/JavaScriptCore/llint/LLIntThunks.cpp:
(JSC::LLInt::returnLocationThunk):

Canonical link: https://commits.webkit.org/281685@main